# fastapi_mongodb

./: .gitignore  app.py  pyproject.toml
config/: db.py
routes/: user.py
schemas/: user.py
